[Java] Fix deprecation warnings on JDK 21.